# tldr-digest

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml
migrations/: env.py
migrations/versions/: 20260512_init.py
tldr/: cli.py  config.py  main.py
tldr/db/: models.py  session.py
tldr/ingest/: imap_client.py  parser.py  service.py
tldr/llm/: base.py  claude.py  enrich.py  factory.py  ollama.py  prompts.py
tldr/reports/: generator.py
tldr/reports/templates/: _card.html.j2  report.html.j2
tldr/web/routes/: articles.py  dashboard.py  inbox.py  reports.py  search.py  settings.py
tldr/web/static/: site.css
tldr/web/templates/: __init__.py  _review_cell.html  article.html  base.html  dashboard.html  inbox.html  reports.html  search.html  settings.html
