[project]
name = "tldr-digest"
version = "0.1.0"
description = "Personal TLDR newsletter ingest, search, and reporting app"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "pgvector>=0.3.6",
  "alembic>=1.14",
  "imap-tools>=1.7",
  "selectolax>=0.3.27",
  "beautifulsoup4>=4.12",
  "anthropic>=0.39",
  "ollama>=0.4",
  "jinja2>=3.1",
  "pydantic-settings>=2.6",
  "typer>=0.13",
  "httpx>=0.27",
  "python-multipart>=0.0.20",
  "python-dateutil>=2.9",
]

[project.scripts]
tldr = "tldr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tldr"]
